# KundeServiceOnboarding

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: SETUP.md  index.html
docs/css/: style.css
docs/js/: app.js  config.js  content.js  db.js
src/onboarding/: __init__.py  __main__.py  app.py  config.py  content.py  db.py  models.py  schemas.py  services.py
src/onboarding/static/css/: style.css
src/onboarding/static/js/: app.js
src/onboarding/templates/: index.html
tests/: conftest.py  test_api.py  test_content.py
