[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "powermatch-onboarding"
version = "1.0.0"
description = "PowerMatch customer-service onboarding wizard — 7-phase guided flow with progress tracking and personal notes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PowerMatch" }]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.scripts]
powermatch-onboarding = "onboarding.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/onboarding"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# B008: FastAPI uses `Depends(...)` in argument defaults by design.
# UP017: `datetime.UTC` is 3.11+, but we support 3.10.
ignore = ["B008", "UP017"]
